tests/neg-macros/delegate-match-2/Test_2.scala

class Test extends App {

  implicit def a1(implicit a: A): A = new A
  f // error

}
